# Python-Tasks

./: .coverage  .gitignore  Fortic.py  Mutant.py  Pr_1.py  README.md  Working_script1.py  dist.doctest  dist.py  g.gv  pyproject.toml  test.py  test_BankAccount.py
IOT/: Visualization.py  data.json  data.xml  paho_parser.py  paho_test_commented.py
KIS/: pr_1.py  pr_10.py  pr_11.py  pr_12.py  pr_2.py  pr_3.py  pr_4.py  pr_5.py  pr_6.py  pr_7.py  pr_8.py  pr_9.py
Notebooks/: Python_Pr_1.ipynb  Python_Pr_4.ipynb  Python_Pr_5.ipynb  Python_pr_2.ipynb  Working_script1.py  test_BankAccount.py
Notebooks/pr_1/: Python_Pr_1.ipynb
Notebooks/pr_2/: Python_Pr_2.ipynb
Notebooks/pr_3/: My_module1.py  My_module2.py  Python_Pr_3.ipynb
Notebooks/pr_4/: Fortic.py
Notebooks/pr_5/: Mutant.py  Python_Pr_5.ipynb
Someting_big/: FormalTesting.py  Formal_Testing.py
Tests/: Mutant.py
