[project]
name = "mirea-python-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor Shadaev",email = "shadaevf@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "deal (>=4.24.5,<5.0.0)",
    "icontract (>=2.7.1,<3.0.0)",
    "hypothesis (>=6.138.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
